# auto-instagram

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: account.example.yaml
content/example-post/: post.yaml
src/auto_instagram/: __init__.py  cli.py  config.py  init_cmd.py
src/auto_instagram/auth/: cookie_import.py  login.py  session.py
src/auto_instagram/browser/: factory.py
src/auto_instagram/content/: loader.py  models.py
src/auto_instagram/publisher/: base.py  playwright_web.py  profile.py  selectors.py
src/auto_instagram/queue/: pacer.py  store.py
src/auto_instagram/templates/: __init__.py  account.example.yaml
src/auto_instagram/templates/example-post/: README.md  post.yaml
src/auto_instagram/utils/: logging.py
tests/: conftest.py
tests/unit/: test_content_loader.py  test_cookie_import.py  test_pacer.py  test_profile.py  test_queue_store.py
